// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Convert direcotry to tree on Unix > 1. should render correctly with Group_by_dir + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "fullLabel": "ui-framework/src/images",
                "label": "images",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/src/images",
                    "fileType": "png",
                    "name": "blender.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "dir",
                "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              },
            ],
            "fullLabel": "ui-framework/src",
            "label": "src",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
          },
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/webview",
                "fileType": "png",
                "name": "d3.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 2. should render correctly with Group_by_dir + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "fullLabel": "ui-framework/src/images",
            "label": "src/images",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/src/images",
                "fileType": "png",
                "name": "blender.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
          },
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/webview",
                "fileType": "png",
                "name": "d3.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 3. should render correctly with Group_by_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/src/images",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/webview",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "type": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 4. should render correctly with Group_by_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/src/images",
            "fileType": "png",
            "name": "blender.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/webview",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "type": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 5. should render correctly with Group_by_dir_and_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "type": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
                  "type": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "svg",
              },
              {
                "children": [
                  {
                    "children": [],
                    "fullLabel": "png",
                    "label": "png",
                    "renderCondition": {
                      "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                      "type": "png",
                      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "renderList": [
                      {
                        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                        "dirPath": "ui-framework/src/images",
                        "fileType": "png",
                        "name": "blender.png",
                        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                        "workspaceFolder": "src",
                      },
                    ],
                    "type": "type",
                    "value": "png",
                  },
                  {
                    "children": [],
                    "fullLabel": "svg",
                    "label": "svg",
                    "renderCondition": {
                      "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                      "type": "svg",
                      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "type": "type",
                    "value": "svg",
                  },
                ],
                "fullLabel": "ui-framework/src/images",
                "label": "images",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "type": "",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "dir",
                "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              },
            ],
            "fullLabel": "ui-framework/src",
            "label": "src",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/webview",
                    "fileType": "png",
                    "name": "d3.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "type",
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "webview",
                "fileType": "png",
                "name": "blender.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 6. should render correctly with Group_by_dir_and_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "type": "png",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "type": "svg",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/src/images",
                    "fileType": "png",
                    "name": "blender.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "type",
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
                  "type": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/src/images",
            "label": "src/images",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "png",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/webview",
                    "fileType": "png",
                    "name": "d3.png",
                    "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "type",
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "label": "svg",
                "renderCondition": {
                  "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "svg",
                  "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "type": "",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "png",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "webview",
                "fileType": "png",
                "name": "blender.png",
                "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "svg",
              "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "type": "",
          "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "type": "",
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 7. should render correctly with Group_by_none + Nested 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "webview",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/src/images",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/webview",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Unix > 8. should render correctly with Group_by_none + Compact 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "workspace": "/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "webview",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/src/images",
        "fileType": "png",
        "name": "blender.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/webview",
        "fileType": "png",
        "name": "d3.png",
        "path": "/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 1. should render correctly with Group_by_dir + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [],
                "fullLabel": "c:ui-framework/src/images",
                "label": "images",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "dir",
                "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              },
            ],
            "fullLabel": "c:ui-framework/src",
            "label": "src",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
          },
        ],
        "fullLabel": "c:ui-framework",
        "label": "c:ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/webview",
                "fileType": "png",
                "name": "d3.png",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "dir",
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 2. should render correctly with Group_by_dir + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "c:ui-framework/src/images",
        "label": "c:ui-framework/src/images",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
      },
      {
        "children": [],
        "fullLabel": "ui-framework/webview",
        "label": "ui-framework/webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/webview",
            "fileType": "png",
            "name": "d3.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
      },
      {
        "children": [],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 3. should render correctly with Group_by_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "type": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "c:ui-framework/src/images",
            "fileType": "png",
            "name": "blender.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/webview",
            "fileType": "png",
            "name": "d3.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "type": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "type": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 4. should render correctly with Group_by_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "type": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "webview",
            "fileType": "png",
            "name": "blender.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "c:ui-framework/src/images",
            "fileType": "png",
            "name": "blender.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "ui-framework/webview",
            "fileType": "png",
            "name": "d3.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "type": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "type": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 5. should render correctly with Group_by_dir_and_type + Nested 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "type": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "type": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
              "type": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
              "type": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
                  "type": "png",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "label": "svg",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
                  "type": "svg",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "svg",
              },
              {
                "children": [
                  {
                    "children": [],
                    "fullLabel": "png",
                    "label": "png",
                    "renderCondition": {
                      "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                      "type": "png",
                      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "type": "type",
                    "value": "png",
                  },
                  {
                    "children": [],
                    "fullLabel": "svg",
                    "label": "svg",
                    "renderCondition": {
                      "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                      "type": "svg",
                      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                    },
                    "type": "type",
                    "value": "svg",
                  },
                ],
                "fullLabel": "c:ui-framework/src/images",
                "label": "images",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
                  "type": "",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "dir",
                "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              },
            ],
            "fullLabel": "c:ui-framework/src",
            "label": "src",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
              "type": "",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src",
          },
        ],
        "fullLabel": "c:ui-framework",
        "label": "c:ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
          "type": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
              "type": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
          {
            "children": [
              {
                "children": [],
                "fullLabel": "png",
                "label": "png",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "png",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "renderList": [
                  {
                    "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                    "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                    "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
                    "dirPath": "ui-framework/webview",
                    "fileType": "png",
                    "name": "d3.png",
                    "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                    "workspaceFolder": "src",
                  },
                ],
                "type": "type",
                "value": "png",
              },
              {
                "children": [],
                "fullLabel": "svg",
                "label": "svg",
                "renderCondition": {
                  "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                  "type": "svg",
                  "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                },
                "type": "type",
                "value": "svg",
              },
            ],
            "fullLabel": "ui-framework/webview",
            "label": "webview",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "type": "",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "dir",
            "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          },
        ],
        "fullLabel": "ui-framework",
        "label": "ui-framework",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
          "type": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "webview",
                "fileType": "png",
                "name": "blender.png",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "type": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "type": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 6. should render correctly with Group_by_dir_and_type + Compact 1`] = `
[
  {
    "children": [
      {
        "children": [],
        "fullLabel": "png",
        "label": "png",
        "renderCondition": {
          "dir": "",
          "type": "png",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "png",
            "name": "d3.png",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "png",
      },
      {
        "children": [],
        "fullLabel": "svg",
        "label": "svg",
        "renderCondition": {
          "dir": "",
          "type": "svg",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "renderList": [
          {
            "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
            "dirPath": "",
            "fileType": "svg",
            "name": "root.svg",
            "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
            "workspaceFolder": "src",
          },
        ],
        "type": "type",
        "value": "svg",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              "type": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
              "type": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
        ],
        "fullLabel": "c:ui-framework/src/images",
        "label": "c:ui-framework/src/images",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
          "type": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/imagec:ui-framework/src/images",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "type": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "ui-framework/webview",
                "fileType": "png",
                "name": "d3.png",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
              "type": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
        ],
        "fullLabel": "ui-framework/webview",
        "label": "ui-framework/webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
          "type": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
      },
      {
        "children": [
          {
            "children": [],
            "fullLabel": "png",
            "label": "png",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "png",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "renderList": [
              {
                "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
                "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
                "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
                "dirPath": "webview",
                "fileType": "png",
                "name": "blender.png",
                "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
                "workspaceFolder": "src",
              },
            ],
            "type": "type",
            "value": "png",
          },
          {
            "children": [],
            "fullLabel": "svg",
            "label": "svg",
            "renderCondition": {
              "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
              "type": "svg",
              "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
            },
            "type": "type",
            "value": "svg",
          },
        ],
        "fullLabel": "webview",
        "label": "webview",
        "renderCondition": {
          "dir": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
          "type": "",
          "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        },
        "type": "dir",
        "value": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
      },
    ],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "dir": "",
      "type": "",
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 7. should render correctly with Group_by_none + Nested 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "webview",
        "fileType": "png",
        "name": "blender.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "c:ui-framework/src/images",
        "fileType": "png",
        "name": "blender.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/webview",
        "fileType": "png",
        "name": "d3.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;

exports[`Convert direcotry to tree on Windows > 8. should render correctly with Group_by_none + Compact 1`] = `
[
  {
    "children": [],
    "fullLabel": "src",
    "label": "src",
    "renderCondition": {
      "workspace": "c:/Users/path/to/project/vscode-image-manager-debug/src",
    },
    "renderList": [
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "svg",
        "name": "root.svg",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/root.svg",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "webview",
        "fileType": "png",
        "name": "blender.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/webview/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "c:ui-framework/src/images",
        "fileType": "png",
        "name": "blender.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/src/images/blender.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "",
        "fileType": "png",
        "name": "d3.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/d3.png",
        "workspaceFolder": "src",
      },
      {
        "absDirPath": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview",
        "absWorkspaceFolder": "c:/Users/path/to/project/vscode-image-manager-debug/src",
        "basePath": "c:/Users/path/to/project/vscode-image-manager-debug",
        "dirPath": "ui-framework/webview",
        "fileType": "png",
        "name": "d3.png",
        "path": "c:/Users/path/to/project/vscode-image-manager-debug/src/ui-framework/webview/d3.png",
        "workspaceFolder": "src",
      },
    ],
    "type": "workspace",
    "value": "c:/Users/path/to/project/vscode-image-manager-debug/src",
  },
]
`;
